test_translator/tests/data/checkpoint_2/core/fail/01_dict_int_keys/solution.py
def get_int_dict():
    return {1: "a", 2: "b", 3: "WRONG"}

def lookup(d, key):
    return d[key]
